fixing/style => flex-start for body alignement on work page

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -7,7 +7,7 @@
 body {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .app-md-portfolio {
@@ -286,11 +286,6 @@ h2.client {
 }
 
 @media (max-width: 760px) {
-
-  body {
-    max-height: 100vh;
-  }
-
   .nav-container {
     width: 100%;
     margin-bottom: 0em;
